--- a/mithril-infra/assets/docker/docker-compose-signer-verified-p2p.yaml
+++ b/mithril-infra/assets/docker/docker-compose-signer-verified-p2p.yaml
@@ -12,6 +12,7 @@ services:
       dockerfile: Dockerfile.cardano
       args:
         CARDANO_IMAGE_ID: ${CARDANO_IMAGE_ID}
+        CARDANO_IMAGE_REGISTRY: ${CARDANO_IMAGE_REGISTRY}
     user: ${CURRENT_UID}
     profiles:
       - cardano
