--- a/.github/workflows/actions/deploy-terraform-infrastructure/action.yml
+++ b/.github/workflows/actions/deploy-terraform-infrastructure/action.yml
@@ -20,6 +20,10 @@ inputs:
   cardano_node_version:
     description: Cardano node version.
     required: true
+  cardano_node_docker_registry:
+    description: Cardano node Docker image registry.
+    required: false
+    default: "ghcr.io/intersectmbo/cardano-node"
   google_region:
     description: Google Cloud region name.
     required: true
@@ -145,6 +149,7 @@ runs:
         environment_prefix                                = "${{ inputs.environment_prefix }}"
         cardano_network                                   = "${{ inputs.cardano_network }}"
         cardano_image_id                                  = "${{ inputs.cardano_node_version }}"
+        cardano_image_registry                          = "${{ inputs.cardano_node_docker_registry }}"
         google_region                                     = "${{ inputs.google_region }}"
         google_zone                                       = "${{ inputs.google_zone }}"
         google_machine_type                               = "${{ inputs.google_machine_type }}"
