--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -49,6 +49,7 @@ reqwest = { version = "0.11.22", features = ["json", "stream"] }
 serde-wasm-bindgen = "0.6.0"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4.37"
+web-sys = { version = "0.3.4", features = ["BroadcastChannel"] }
 
 [dev-dependencies]
 httpmock = "0.6.8"
