--- a/mithril-client/Cargo.toml
+++ b/mithril-client/Cargo.toml
@@ -31,6 +31,7 @@ semver = "1.0.19"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.107"
 slog = "2.7.0"
+strum = { version = "0.25.0", features = ["derive"] }
 tar = { version = "0.4.40", optional = true }
 thiserror = "1.0.49"
 tokio = { version = "1.32.0", features = ["sync"] }
