Create 'mithril-client-wasm' crate for WASM

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ members = [
   "mithril-aggregator",
   "mithril-client",
   "mithril-client-cli",
+  "mithril-client-wasm",
   "mithril-common",
   "mithril-relay",
   "mithril-signer",
