--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,7 @@ jobs:
           libraries-build-args: ${{ matrix.libraries-build-args }}
           common-build-args: ${{ matrix.common-build-args }}
 
-  build-wasm:
+  build-test-wasm:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout sources
@@ -123,10 +123,15 @@ jobs:
           cache-version: ${{ secrets.CACHE_VERSION }}-wasm
           cargo-tools: wasm-pack
 
-      - name: Cargo build 'mithril-client' - WASM package
+      - name: Build 'mithril-client' - WASM package
         shell: bash
         run: |
-          wasm-pack build mithril-client --release
+          wasm-pack build mithril-client-wasm --release
+
+      - name: Test 'mithril-client' - WASM package
+        shell: bash
+        run: |
+          wasm-pack test --headless --firefox --chrome --node mithril-client-wasm --release
 
   test:
     strategy:
