--- a/examples/client-snapshot/Cargo.toml
+++ b/examples/client-snapshot/Cargo.toml
@@ -2,7 +2,7 @@
 name = "client-snapshot"
 description = "Mithril client snapshot example"
 version = "0.1.0"
-authors = ["dev@iohk.io"]
+authors = ["dev@iohk.io", "mithril-dev@iohk.io"]
 documentation = "https://mithril.network/doc"
 edition = "2021"
 homepage = "https://mithril.network"
