--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,7 +155,7 @@ jobs:
         with:
           name: mithril-distribution-wasm
           path: |
-            *-mithril-client-wasm-*.tgz
+            mithril-client-wasm/**/*-mithril-client-wasm-*.tgz
           if-no-files-found: error
   test:
     strategy:
@@ -432,11 +432,47 @@ jobs:
           dry_run: "true"
           package: ${{ matrix.package }}
 
+  publish-wasm-test:
+    strategy:
+      fail-fast: false
+      max-parallel: 1
+      matrix:
+        package: [ mithril-client-wasm ]
+        include:
+          - package: mithril-client-wasm
+            scope: mithril-dev
+            tag: latest
+            access: public
+            api_token_secret_name: NPM_API_TOKEN_MITHRIL_CLIENT_WASM
+          
+    runs-on: ubuntu-22.04
+    needs:
+      - build-test-wasm
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v3
+
+      - name: Install stable toolchain, tools, and restore cache
+        uses: ./.github/workflows/actions/toolchain-and-cache
+        with:
+          cache-version: ${{ secrets.CACHE_VERSION }}-wasm
+          cargo-tools: wasm-pack
+        
+      - name: Publish package to npm
+        uses: ./.github/workflows/actions/publish-npm-package
+        with:
+          dry_run: "true"
+          package: ${{ matrix.package }}
+          scope: ${{ matrix.scope }}
+          access: ${{ matrix.access }}
+          api_token: ${{ secrets[matrix.api_token_secret_name] }}
+
   unstable-release:
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || startsWith('refs/heads/hotfix', github.ref))
     runs-on: ubuntu-22.04
     needs:
       - build
+      - build-test-wasm
       - test
       - run-test-lab
       - check
