--- a/mithril-fake-aggregator/Cargo.toml
+++ b/mithril-fake-aggregator/Cargo.toml
@@ -20,5 +20,6 @@ serde_json = "1.0.108"
 signal-hook = "0.3.17"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 tokio = { version = "1.35.0", features = ["full"] }
+tower-http = { version = "0.5.0", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
