--- a/mithril-client-cli/Cargo.toml
+++ b/mithril-client-cli/Cargo.toml
@@ -46,6 +46,7 @@ slog = { version = "2.7.0", features = [
     "release_max_level_debug",
 ] }
 slog-async = "2.8.0"
+slog-bunyan = "2.4.0"
 slog-scope = "4.4.0"
 slog-term = "2.9.0"
 thiserror = "1.0.49"
