--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -34,7 +34,12 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "sk_clone_enabled",
 ] }
 nom = "7.1.3"
-pallas-network = { version = "0.20.0", optional = true }
+# pallas-network = { version = "0.20.0", optional = true }
+pallas-network = { version = "=0.20.0", path = "/Users/falcucci/txpipe/pallas/pallas-network", optional = true }
+pallas-addresses = { version = "=0.20.0", path = "/Users/falcucci/txpipe/pallas/pallas-addresses" }
+pallas-codec = { version = "=0.20.0", path = "/Users/falcucci/txpipe/pallas/pallas-codec" }
+pallas-crypto = { version = "=0.20.0", path = "/Users/falcucci/txpipe/pallas/pallas-crypto" }
+minicbor = { version = "0.19", features = ["std", "half", "derive"] }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.0"
@@ -74,7 +79,9 @@ mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = fal
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.11.4"
-pallas-codec = "0.20.0"
+# pallas-codec = "0.20.0"
+# pallas-codec = { version = "=0.20.0", path = "/Users/falcucci/txpipe/pallas/pallas-codec" }
+# pallas-crypto = { version = "=0.20.0", path = "/Users/falcucci/txpipe/pallas/pallas-crypto" }
 reqwest = { version = "0.11.22", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
