--- a/mithril-infra/assets/docker/docker-compose-aggregator-noauth-p2p.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-noauth-p2p.yaml
@@ -52,6 +52,7 @@ services:
       - PROTOCOL_PARAMETERS__M=${PROTOCOL_PARAMETERS__M}
       - PROTOCOL_PARAMETERS__PHI_F=${PROTOCOL_PARAMETERS__PHI_F}
       - RUN_INTERVAL=60000
+      - SIGNED_ENTITY_TYPES=${SIGNED_ENTITY_TYPES}
       - SNAPSHOT_STORE_TYPE=local
       - SNAPSHOT_UPLOADER_TYPE=gcp
       - SNAPSHOT_BUCKET_NAME=${SNAPSHOT_BUCKET_NAME}
