--- a/mithril-fake-aggregator/Cargo.toml
+++ b/mithril-fake-aggregator/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "mithril-fake-aggregator"
 version = "0.1.0"
-authors.workspace = true
-documentation.workspace = true
-edition.workspace = true
-homepage.workspace = true
-license.workspace = true
-repository.workspace = true
-
+description = "Mithril Fake Aggregator for client testing"
+authors = { workspace = true }
+documentation = { workspace = true }
+edition = { workspace = true }
+homepage = { workspace = true }
+license = { workspace = true }
+repository = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
