--- a/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
+++ b/mithril-infra/assets/docker/docker-compose-aggregator-auth.yaml
@@ -65,6 +65,7 @@ services:
       - CARDANO_NODE_SOCKET_PATH=/ipc/node.socket
       - CARDANO_NODE_VERSION=${CARDANO_IMAGE_ID}
       - CARDANO_CLI_PATH=/app/bin/cardano-cli
+      - CHAIN_OBSERVER_TYPE=${CHAIN_OBSERVER_TYPE}
       - GENESIS_VERIFICATION_KEY=${GENESIS_VERIFICATION_KEY}
       - GENESIS_SECRET_KEY=${GENESIS_SECRET_KEY}
       - DB_DIRECTORY=/db
