--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -35,10 +35,10 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 ] }
 minicbor = { version = "0.19", features = ["std", "half", "derive"] }
 nom = "7.1.3"
-pallas-addresses = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
-pallas-codec = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
-pallas-network = { git = "https://github.com/txpipe/pallas.git", branch = "main", optional = true }
-pallas-primitives = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
+pallas-addresses = "0.21.0"
+pallas-codec = "0.21.0"
+pallas-network = { version = "0.21.0", optional = true }
+pallas-primitives = "0.21.0"
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.0"
@@ -78,7 +78,7 @@ mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = fal
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.12.0"
-pallas-crypto = { git = "https://github.com/txpipe/pallas.git", branch = "main" }
+pallas-crypto = "0.21.0"
 reqwest = { version = "0.11.22", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
