--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -33,12 +33,12 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "serde_enabled",
     "sk_clone_enabled",
 ] }
-minicbor = { version = "0.19", features = ["std", "half", "derive"] }
+minicbor = { version = "0.20", features = ["std", "half", "derive"] }
 nom = "7.1.3"
-pallas-addresses = "0.21.0"
-pallas-codec = "0.21.0"
+pallas-addresses = { version = "0.21.0", optional = true }
+pallas-codec = { version = "0.21.0", optional = true }
 pallas-network = { version = "0.21.0", optional = true }
-pallas-primitives = "0.21.0"
+pallas-primitives = { version = "0.21.0", optional = true }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.0"
@@ -98,7 +98,14 @@ default = []
 full = ["random", "database", "fs", "test_tools"]
 random = ["rand_core/getrandom"]
 database = ["sqlite"]
-fs = ["tokio/fs", "tokio/process", "pallas-network"]
+fs = [
+  "tokio/fs",
+  "tokio/process",
+  "pallas-network",
+  "pallas-addresses",
+  "pallas-primitives",
+  "pallas-codec",
+]
 
 # Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 portable = ["mithril-stm/portable"]
