chore: refactor dependencies in `mithril-common` package
- replace the dependency in the `mithril-common` package from `pallas-network`, `pallas-addresses`, `pallas-primitives`, and `pallas-codec` to only `pallas-codec`.

--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -104,7 +104,7 @@ fs = [
   "pallas-network",
   "pallas-addresses",
   "pallas-primitives",
-  "pallas-codec",
+  "pallas-codec"
 ]
 
 # Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
