--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -101,10 +101,10 @@ database = ["sqlite"]
 fs = [
   "tokio/fs",
   "tokio/process",
-  "pallas-network",
   "pallas-addresses",
+  "pallas-codec",
+  "pallas-network",
   "pallas-primitives",
-  "pallas-codec"
 ]
 
 # Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
