--- a/mithril-fake-aggregator/Cargo.toml
+++ b/mithril-fake-aggregator/Cargo.toml
@@ -23,3 +23,7 @@ tokio = { version = "1.35.0", features = ["full"] }
 tower-http = { version = "0.5.0", features = ["trace"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+
+[dev-dependencies]
+mithril-common = { path = "../mithril-common", features = ["full"] }
+reqwest = "0.11.23"
