Adapt CI and update `mithril-client-wasm` Makefile

--- a/.github/workflows/actions/publish-npm-package/action.yml
+++ b/.github/workflows/actions/publish-npm-package/action.yml
@@ -50,7 +50,7 @@ runs:
       echo "Build '@${{ inputs.scope }}/${{ inputs.package }}' package"
       cp ./LICENSE ./mithril-client-wasm/
       cp -f ./mithril-client-wasm/npm/README.md ./mithril-client-wasm/
-      wasm-pack build ${{ inputs.package }} --release --target bundler --out-dir ./pkg --scope ${{ inputs.scope }} --out-name index
+      wasm-pack build ${{ inputs.package }} --release --target web --out-dir ./pkg --scope ${{ inputs.scope }} --out-name index
 
   - name: List package
     shell: bash
