--- a/mithril-fake-aggregator/Cargo.toml
+++ b/mithril-fake-aggregator/Cargo.toml
@@ -25,5 +25,6 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
-mithril-common = { path = "../mithril-common", features = ["full"] }
 reqwest = "0.11.23"
+mithril-common = { "path" = "../mithril-common", features = ["test_tools", "random"] }
+http = "0.2.9"
