rename directory, add doc blocks

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ members = [
   "mithril-client-cli",
   "mithril-client-wasm",
   "mithril-common",
-  "mithril-fake-aggregator",
+  "mithril-aggregator-fake",
   "mithril-relay",
   "mithril-signer",
   "mithril-stm",
