--- a/mithril-signer/Makefile
+++ b/mithril-signer/Makefile
@@ -33,7 +33,7 @@ docker-build:
 	cd ../ && docker build -t mithril/mithril-signer -f mithril-signer/Dockerfile .
 
 docker-build-ci: build
-	cd ../ && docker build -t mithril/mithril-signer -f mithril-signer/Dockerfile.ci --build-arg DOCKER_IMAGE_FROM .
+	cd ../ && docker build -t mithril/mithril-signer -f mithril-signer/Dockerfile.ci --build-arg DOCKER_IMAGE_FROM --build-arg CARDANO_NODE_VERSION .
 
 docker-run:
 	docker run --rm --name='mithril-signer' mithril/mithril-signer
