--- a/mithril-aggregator/Dockerfile.ci
+++ b/mithril-aggregator/Dockerfile.ci
@@ -14,7 +14,8 @@ RUN mkdir -p /app/bin
 RUN apt-get update -y && apt-get install -y libssl-dev ca-certificates wget && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install cardano-cli
-ARG CARDANO_BIN_URL=https://github.com/input-output-hk/cardano-node/releases/download/8.7.3/cardano-node-8.7.3-linux.tar.gz
+ARG CARDANO_NODE_VERSION=8.7.3
+ARG CARDANO_BIN_URL=https://github.com/input-output-hk/cardano-node/releases/download/$CARDANO_NODE_VERSION/cardano-node-$CARDANO_NODE_VERSION-linux.tar.gz
 RUN wget -nv -O cardano-bin.tar.gz $CARDANO_BIN_URL \
     && tar xzf cardano-bin.tar.gz ./cardano-cli && mv cardano-cli /app/bin \
     && /app/bin/cardano-cli --version \
