--- a/mithril-aggregator-fake/Cargo.toml
+++ b/mithril-aggregator-fake/Cargo.toml
@@ -20,11 +20,11 @@ serde_json = "1.0.108"
 signal-hook = "0.3.17"
 signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
 tokio = { version = "1.35.0", features = ["full"] }
-tower-http = { version = "0.5.0", features = ["trace"] }
+tower-http = { version = "0.5.0", features = ["trace", "cors"] }
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
-reqwest = "0.11.23"
-mithril-common = { "path" = "../mithril-common", features = ["test_tools", "random"] }
 http = "0.2.9"
+mithril-common = { "path" = "../mithril-common", features = ["test_tools", "random"] }
+reqwest = "0.11.23"
