--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -33,7 +33,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
     "serde_enabled",
     "sk_clone_enabled",
 ] }
-minicbor = { version = "0.20", features = ["std", "half", "derive"] }
+minicbor = { version = "0.20", features = ["std", "half", "derive"], optional = true }
 nom = "7.1.3"
 pallas-addresses = { version = "0.21.0", optional = true }
 pallas-codec = { version = "0.21.0", optional = true }
@@ -101,6 +101,7 @@ database = ["sqlite"]
 fs = [
   "tokio/fs",
   "tokio/process",
+  "minicbor",
   "pallas-addresses",
   "pallas-codec",
   "pallas-network",
