--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -35,6 +35,7 @@ kes-summed-ed25519 = { version = "0.2.1", features = [
 ] }
 nom = "7.1.3"
 pallas-network = { version = "0.21.0", optional = true }
+pallas-traverse = { version = "0.21.0", optional = true }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 rayon = "1.8.0"
@@ -94,7 +95,7 @@ default = []
 full = ["random", "database", "fs", "test_tools"]
 random = ["rand_core/getrandom"]
 database = ["sqlite"]
-fs = ["tokio/fs", "tokio/process", "pallas-network"]
+fs = ["tokio/fs", "tokio/process", "pallas-network", "pallas-traverse"]
 
 # Portable feature avoids SIGILL crashes on CPUs not supporting Intel ADX instruction set when built on CPUs that support it
 portable = ["mithril-stm/portable"]
