--- a/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
+++ b/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mithril-aggregator-fake"
-version = "0.1.0"
+version = "0.1.1"
 description = "Mithril Fake Aggregator for client testing"
 authors = { workspace = true }
 documentation = { workspace = true }
@@ -26,5 +26,8 @@ tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 http = "0.2.9"
-mithril-common = { "path" = "../../mithril-common", features = ["test_tools", "random"] }
+mithril-common = { "path" = "../../mithril-common", features = [
+    "test_tools",
+    "random",
+] }
 reqwest = "0.11.23"
