Specify explicitly permissions for prereleaes creation
This is a tentative fix to avoid 403 errors when the tag is not the head of any
branchs.

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   create-pre-release:
     runs-on: ubuntu-22.04
+    permissions:
+      contents: write
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
