Improve tests to refactor

--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -85,6 +85,7 @@ criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 mockall = "0.12.1"
 pallas-crypto = "0.23.0"
 rand_core = { version = "0.6.4", features = ["getrandom"] }
+regex = "1.10.3"
 reqwest = { version = "0.11.23", features = ["json"] }
 slog-async = "2.8.0"
 slog-scope = "4.4.0"
