--- a/mithril-doc-derive/Cargo.toml
+++ b/mithril-doc-derive/Cargo.toml
@@ -14,7 +14,7 @@ proc-macro = true
 
 [dependencies]
 quote = "1.0.35"
-syn = "2.0.48"
+syn = { version = "2.0.48", features = ["full"] }
 
 [features]
 default = []
