Switch explorer from yarn to npm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -755,13 +755,13 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: 'yarn'
-          cache-dependency-path: mithril-explorer/yarn.lock
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: mithril-explorer/package-lock.json
 
       - name: Install dependencies
         working-directory: mithril-explorer
-        run: yarn install --frozen-lockfile
+        run: npm ci
       
       - name: Test explorer
         working-directory: mithril-explorer
