--- a/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
+++ b/mithril-test-lab/mithril-aggregator-fake/Cargo.toml
@@ -24,9 +24,10 @@ tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
-http = "0.2.9"
 mithril-common = { "path" = "../../mithril-common", features = [
     "test_tools",
     "random",
 ] }
 reqwest = "0.11.23"
+warp = "0.3.6"
+
