chore: remove 'testing-sanchonet' from manual deployment workflow

--- a/.github/workflows/test-deploy-network.yml
+++ b/.github/workflows/test-deploy-network.yml
@@ -15,7 +15,6 @@ on:
         type: choice
         options:
         - dev-preview
-        - testing-sanchonet
       dry_run:
         description: Dry run will not deploy the distribution to the Mithril network
         required: true
@@ -27,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        environment: [ dev-preview, testing-sanchonet ]
+        environment: [ dev-preview ]
         include:
         - environment: dev-preview
           environment_prefix: dev
@@ -54,31 +53,6 @@ jobs:
               "3" = {
                 type    = "unverified",
                 pool_id = "pool1r0tln8nct3mpyvehgy6uu3cdlmjnmtr2fxjcqnfl6v0qg0we42e",
-              },
-            }
-          terraform_backend_bucket: hydra-terraform-admin
-          google_region: europe-west1
-          google_zone: europe-west1-b
-          google_machine_type: e2-highmem-4
-          google_compute_instance_boot_disk_size: 200
-          google_compute_instance_data_disk_size: 250
-        - environment: testing-sanchonet
-          environment_prefix: testing
-          cardano_network: sanchonet
-          mithril_use_p2p_network: false
-          mithril_api_domain: api.mithril.network
-          mithril_era_reader_adapter_type: bootstrap
-          mithril_protocol_parameters: |
-            {
-              k     = 5
-              m     = 100
-              phi_f = 0.65
-            }
-          mithril_signers: |
-            {
-              "1" = {
-                type    = "verified",
-                pool_id = "",
               },
             }
           terraform_backend_bucket: hydra-terraform-admin
