Update docs, ci and build files
Add new crate to:
* global Makefile
* docsite reference table
* `ci.yml` to `cargo-doc` generation step
* `flake.nix` builded artifacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -701,8 +701,8 @@ jobs:
         run: |
           # Force `--lib` to avoid a collision between the client lib and the client cli binary who share
           # the same name (we only want to document those anyway)
-          cargo doc --no-deps --lib -p mithril-stm -p mithril-common -p mithril-aggregator \
-                    -p mithril-signer -p mithril-client -p mithril-client-cli \
+          cargo doc --no-deps --lib -p mithril-stm -p mithril-common -p mithril-persistence \
+                    -p mithril-aggregator -p mithril-signer -p mithril-client -p mithril-client-cli \
                     --all-features --message-format=json \
                     | clippy-sarif | tee rust-cargo-doc-results.sarif | sarif-fmt
           
