--- a/mithril-aggregator/Cargo.toml
+++ b/mithril-aggregator/Cargo.toml
@@ -20,6 +20,7 @@ flate2 = "1.0.28"
 hex = "0.4.3"
 mithril-common = { path = "../mithril-common", features = ["full"] }
 mithril-persistence = { path = "../mithril-persistence" }
+mithril-doc = { path = "../mithril-doc" }
 mithril-doc-derive = { path = "../mithril-doc-derive" }
 openssl = { version = "0.10.63", features = ["vendored"], optional = true }
 openssl-probe = { version = "0.1.5", optional = true }
