--- a/demo/protocol-demo/Cargo.toml
+++ b/demo/protocol-demo/Cargo.toml
@@ -15,6 +15,7 @@ clap = { version = "4.4.18", features = ["derive"] }
 hex = "0.4.3"
 log = "0.4.20"
 mithril-common = { path = "../../mithril-common", features = ["fs"] }
+mithril-doc = { path = "../../mithril-doc" }
 rand_chacha = "0.3.1"
 rand_core = "0.6.4"
 serde = { version = "1.0.196", features = ["derive"] }
