--- a/mithril-relay/Cargo.toml
+++ b/mithril-relay/Cargo.toml
@@ -28,6 +28,7 @@ libp2p = { version = "0.53.2", features = [
     "yamux",
 ] }
 mithril-common = { path = "../mithril-common", features = ["full"] }
+mithril-doc = { path = "../mithril-doc" }
 reqwest = { version = "0.11.23", features = ["json"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = "1.0.113"
