--- a/mithril-signer/Cargo.toml
+++ b/mithril-signer/Cargo.toml
@@ -17,6 +17,7 @@ config = "0.13.4"
 hex = "0.4.3"
 mithril-common = { path = "../mithril-common", features = ["full"] }
 mithril-persistence = { path = "../mithril-persistence" }
+mithril-doc = { path = "../mithril-doc" }
 mithril-doc-derive = { path = "../mithril-doc-derive" }
 openssl = { version = "0.10.63", features = ["vendored"], optional = true }
 openssl-probe = { version = "0.1.5", optional = true }
