Add Cardano transactions functionnalities in `www/`

--- a/mithril-common/Cargo.toml
+++ b/mithril-common/Cargo.toml
@@ -74,6 +74,7 @@ mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = fal
 mithril-stm = { path = "../mithril-stm", version = "0.3", default-features = false, features = [
     "num-integer-backend",
 ] }
+wasm-bindgen = "0.2.90"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
